--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests
-      env:
-        MONGO_USER: root
-        MONGO_PASSWORD: example
-        MONGO_HOST: localhost
-        MONGO_PORT: 27017
-        MONGO_DB_NAME: testdb
+    - name: Import MongoDB Data
       run: |
-        python -m unittest discover tests
+        mongoimport --db UniversalDB --collection games --file UniversalDB.games.json --jsonArray
+
+    - name: Run tests
+     
