--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,41 +9,41 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    services:
-      mongo:
-        image: mongo:latest
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'" 
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: your-dockerhub-username/your-image-name:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
+      - name: Install Argo CD CLI
+        run: |
+          curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/download/v2.0.0/argocd-linux-amd64
+          chmod +x /usr/local/bin/argocd
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Log in to Argo CD
+        run: argocd login your-argocd-server --username ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }}
 
-    - name: Import MongoDB Data
-      run: |
-        mongoimport --db UniversalDB --collection games --file UniversalDB.games.json --jsonArray
-
-    - name: Run tests
-      env:
-        MONGO_USER: root
-        MONGO_PASSWORD: example
-        MONGO_HOST: localhost
-        MONGO_PORT: 27017
-        MONGO_DB_NAME: testdb
-      run: |
-        python -m unittest discover tests
+      - name: Sync Argo CD application
+        run: argocd app sync your-application-name
