--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DOCKER_IMAGE: 'movsho/game-searcher'
+      DOCKER_HELM: 'movsho/game-searcher-helm'
+      GIT_BRANCH: 'main'
 
     steps:
       - name: Checkout code
@@ -19,31 +23,38 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: your-dockerhub-username/your-image-name:latest
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Install Argo CD CLI
+      - name: Extract version from file
+        id: extract_version
         run: |
-          curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/download/v2.0.0/argocd-linux-amd64
-          chmod +x /usr/local/bin/argocd
+          VERSION=$(cat VERSION.txt)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Log in to Argo CD
-        run: argocd login your-argocd-server --username ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }}
+      - name: Build Docker image
+        run: |
+          docker build -f ./Dockerfile -t $DOCKER_IMAGE:${{ env.VERSION }} .
+          echo 'Docker image built successfully'
 
-      - name: Sync Argo CD application
-        run: argocd app sync your-application-name
+      - name: Push Docker image
+        run: |
+          echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+          docker push $DOCKER_IMAGE:${{ env.VERSION }}
+
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
+      - name: Build and push Helm chart
+        run: |
+          helm package helm
+          echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+          helm push game-searcher-helm-${{ env.VERSION }}.tgz oci://registry-1.docker.io/movsho/
+
+  env:
+    MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+    MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+    MONGO_DB_NAME: ${{ secrets.MONGO_DB_NAME }}
+    MONGO_DB_USER: ${{ secrets.MONGO_DB_USER }}
+    MONGO_DB_PASS: ${{ secrets.MONGO_DB_PASS }}
