--- a/python-service.yml
+++ b/python-service.yml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: game-search-service
+  name: game-searcher-service
+  namespace: default
 spec:
   selector:
     app: game-searcher
