--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,21 +38,15 @@ jobs:
         run: echo "VERSION=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Build Docker image
-        run: |
-          docker build -f ./Dockerfile -t $DOCKER_IMAGE:${{ env.VERSION }} .
-          echo 'Docker image built successfully'
+        run: docker build -f ./Dockerfile -t ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} .
 
       - name: Push Docker image
-        run: |
-          echo "${{ secrets.DOCKER_PASS }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
-          docker push $DOCKER_IMAGE:${{ env.VERSION }}
+        run: docker push ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
 
       - name: Install Helm
-        run: |
-          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+        run: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
       - name: Build and push Helm chart
         run: |
           helm package helm
-          echo "${{ secrets.DOCKER_PASS }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
-          helm push game-searcher-helm-${{ env.VERSION }}.tgz oci://registry-1.docker.io/movsho/game-searcher-helm/
+          helm push game-searcher-helm-${{ env.VERSION }}.tgz oci://registry-1.docker.io/${{ env.DOCKER_HELM }}/
