--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: game-searcher-helm
 description: A Helm chart for deploying game-searcher application
-version: 0.1.0
+version: PLACEHOLDER_VERSION
 appVersion: "1.0"
