--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install Helm
         run: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
+      - name: Replace version in Chart.yaml
+        run: sed -i 's/PLACEHOLDER_VERSION/${{ env.VERSION }}/' helm/Chart.yaml
+
       - name: Build and push Helm chart
         run: |
           helm package helm
