--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Set version
         id: set_version
-        run: echo "VERSION=0.1.0-${GITHUB_SHA::7}" >> $GITHUB_ENV
+        run: echo "VERSION=0.1.0-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: docker build -f ./Dockerfile -t ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} .
@@ -55,5 +55,5 @@ jobs:
       - name: Build and push Helm chart
         run: |
           helm package helm
-          ls -al game-searcher-helm-0.1.0-${{ github.sha::7 }}.tgz
-          helm push game-searcher-helm-0.1.0-${{ github.sha::7 }}.tgz ${{ env.DOCKER_HELM }}
+          ls -al game-searcher-helm-0.1.0-${{ env.VERSION }}.tgz
+          helm push game-searcher-helm-0.1.0-${{ env.VERSION }}.tgz ${{ env.DOCKER_HELM }}
