--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,19 +35,19 @@ jobs:
 
       - name: Set version
         id: set_version
-        run: echo "VERSION=0.1.0-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
+        run: echo "VERSION=0.1.0-${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Build Docker image
-        run: docker build -f ./Dockerfile -t ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }} .
+        run: docker build -f ./Dockerfile -t ${{ env.DOCKER_IMAGE }}:${{ steps.set_version.outputs.VERSION }} .
 
       - name: Push Docker image
-        run: docker push ${{ env.DOCKER_IMAGE }}:${{ env.VERSION }}
+        run: docker push ${{ env.DOCKER_IMAGE }}:${{ steps.set_version.outputs.VERSION }}
 
       - name: Install Helm
         run: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
       - name: Replace version in Chart.yaml
-        run: sed -i 's/PLACEHOLDER_VERSION/${{ env.VERSION }}/' helm/Chart.yaml
+        run: sed -i 's/PLACEHOLDER_VERSION/${{ steps.set_version.outputs.VERSION }}/' helm/Chart.yaml
 
       - name: Log in to Helm OCI registry
         run: helm registry login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }} registry-1.docker.io
@@ -55,5 +55,5 @@ jobs:
       - name: Build and push Helm chart
         run: |
           helm package helm
-          ls -al game-searcher-helm-0.1.0-${{ env.VERSION }}.tgz
-          helm push game-searcher-helm-0.1.0-${{ env.VERSION }}.tgz ${{ env.DOCKER_HELM }}
+          ls -al game-searcher-helm-0.1.0-${{ steps.set_version.outputs.VERSION }}.tgz
+          helm push game-searcher-helm-0.1.0-${{ steps.set_version.outputs.VERSION }}.tgz ${{ env.DOCKER_HELM }}
